Closed
Bug 1319543
Opened 9 years ago
Closed 9 years ago
ogg file no longer playing in firefox 50
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: philipp, Assigned: jya)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
mozbugz
:
review+
jcristau
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
ritu
:
approval-mozilla-release+
|
Details |
we got a report at sumo by a user that after the update to firefox 50 certain .ogg files do no longer play, one sample url that was given was https://s3-sa-east-1.amazonaws.com/ell-random-sharing/st_294_1.ogg
this problem is reproducible and in the web console i get the error: "Media resource https://s3-sa-east-1.amazonaws.com/ell-random-sharing/st_294_1.ogg could not be decoded."
when looking for the regression range of the issue with mozrgression i ended up with https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=786521deead2bb8607d806ed77562baf4783b318&tochange=de5f049f1029d88385fadb9a57a0d64ae78a1332 & bug 1288329.
| Assignee | ||
Updated•9 years ago
|
Priority: -- → P3
QA Contact: jyavenard
| Assignee | ||
Comment 1•9 years ago
|
||
from about:media
From about:media:
currentTime: 12.516 readyState: 1 error: 3 (0x806e0007: DoDecode: Overflow adding total_duration and aTstampUsecs)
| Assignee | ||
Comment 2•9 years ago
|
||
the first sample has a negative time... this makes the file non-spec compliant.
| Comment hidden (mozreview-request) |
Assignee: nobody → jyavenard
Comment 4•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8813452 [details]
Bug 1319543: Prevent overflow if sample's time is negative.
https://reviewboard.mozilla.org/r/94854/#review95078
Attachment #8813452 -
Flags: review?(gsquelart) → review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3e36c1367ba2
Prevent overflow if sample's time is negative. r=gerald
Comment 6•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
| Assignee | ||
Comment 7•9 years ago
|
||
Comment on attachment 8813452 [details]
Bug 1319543: Prevent overflow if sample's time is negative.
Approval Request Comment
[Feature/regressing bug #]: 1288329
[User impact if declined]: Some file with vorbis will no longer play (not just ogg as the bug title suggest, it can impact webm used by youtube too)
[Describe test coverage new/current, TreeHerder]: in central
[Risks and why]: Low, it was an incorrect cast between signed / unsigned
[String/UUID change made/needed]: None
Would be nice to have that in the point release too.
Attachment #8813452 -
Flags: approval-mozilla-release?
Attachment #8813452 -
Flags: approval-mozilla-beta?
Attachment #8813452 -
Flags: approval-mozilla-aurora?
Comment 8•9 years ago
|
||
Hi :philipp,
could you help verify if this issue is fixed as expected on the latest Nightly build? Thanks!
Flags: needinfo?(madperson)
Comment 9•9 years ago
|
||
confirmed that the file from comment #0 doesn't play with yesterday's nightly and plays with today's
Flags: needinfo?(madperson)
Comment 10•9 years ago
|
||
Comment on attachment 8813452 [details]
Bug 1319543: Prevent overflow if sample's time is negative.
fix signedness confusion in vorbis decoder, aurora52+
Attachment #8813452 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•9 years ago
|
||
Comment on attachment 8813452 [details]
Bug 1319543: Prevent overflow if sample's time is negative.
Fix a regression related to ogg file and was verified. Beta51+. Should be in 51 beta 4.
Attachment #8813452 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 12•9 years ago
|
||
| bugherder uplift | ||
Comment 13•9 years ago
|
||
| bugherder uplift | ||
Comment on attachment 8813452 [details]
Bug 1319543: Prevent overflow if sample's time is negative.
Fix has been verified on pre-release, new regression in 50, meets the bar for 50.1.0
Attachment #8813452 -
Flags: approval-mozilla-release? → approval-mozilla-release+
You need to log in
before you can comment on or make changes to this bug.
Description
•