Bug 1319543: Prevent overflow if sample's time is negative. r=gerald a=gchang

MozReview-Commit-ID: I94vvJccOqE